test_suite/ui/invalid_name_in_default.stderr
error[E0599]: no variant or associated item named `C` found for enum `Test` in the current scope
 --> ui/invalid_name_in_default.rs:6:26
  |
6 | #[bitflags(default = A | C)]
  |                          ^
  |                          |
  |                          variant or associated item not found in `Test`
  |                          help: there is a variant with a similar name: `A`
...
9 | enum Test {
  | --------- variant or associated item `C` not found for this enum
